--- a/src/styles/cmps/_card-preview.scss
+++ b/src/styles/cmps/_card-preview.scss
@@ -50,7 +50,8 @@
 
     &:hover {
         cursor: pointer;
-        background-color: #e0e4eb18;
+        background-color: #ffffff07;
+        // background-color: #e0e4eb18;
         .cover-full .edit-btn,
         .cover-half .edit-btn,
         .main-preview .edit-btn {
